--- a/src/view/pages/upload.html
+++ b/src/view/pages/upload.html
@@ -1,4 +1,4 @@
-{% extends "wiki/index.html" %}
+{% extends "pages/index.html" %}
 {% block title %}Upload an image{% endblock %}
 
 {% block body %}
