--- a/src/view/pages/login.html
+++ b/src/view/pages/login.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<title>Login Page</title>
+</head>
+<body>
+<h1>Login to Admin of Example Wiki</h1>
 {% if error %}
 <font color="red">{{ error }}</font>
 {% endif %}
@@ -9,5 +15,7 @@ Password:<br />
 <input name="password" type="password" /><br /><br />
 
 <input type="submit" value="Log in" />
-<input type="hidden" name="redirect" value="{{ redirect|default_if_none:"/wiki/index" }}" />
+<input type="hidden" name="redirect" value="{{ redirect|default_if_none:"/pages/index" }}" />
 </form>
+</body>
+</html>
